--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="main-logo">
             <div>
-                <img class="logo" src="/images/PET GO✅.png" alt="logo">
+                <img class="logo" src="/images/logo.png" alt="logo">
             </div>
             <div class="main">
                 <h1>PET GO <span class="a">&#10003;</span> </h1>
