--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="z">
             <h4>Subscribe to our news letter</h4>
             <div class="email">
-                <input type="email">
+                <input type="email" placeholder="Email Address">
                 <button>SUBSCRIBE</button>
             </div>
         </div>
