--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/473bffc45b.js" crossorigin="anonymous"></script>
-    <title>homepage</title>
+    <title>Pet Go</title>
 </head>
 <body>
     <header>
