--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h4>Subscribe to our news letter</h4>
             <div class="email">
                 <input type="email" placeholder="Email Address">
-                <button>SUBSCRIBE</button>
+                <button onclick="done()">SUBSCRIBE</button>
             </div>
         </div>
     </section>
@@ -172,5 +172,12 @@
             <a href="">Privacy policy</a>
         </div>
     </footer>
+<script>
+        function done(){
+            alert('Thank you for Subscribing to our news letter')
+        }
+
+    </script>
+
 </body>
 </html>
